# python_packaging_examples

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
artefacts/: artefact.txt
artifacts/: artifact.txt
src/ppe/: main.py
src/ppe/data/: artifact2.txt
