[tool.poetry]
name = "ppe"
version = "0.0.0" # Overwritten by dynamic-versioning plugin see https://pypi.org/project/poetry-dynamic-versioning/
description = "Python packaging examples with poetry"
authors = ["Manuel Pasieka <manuel.pasieka@protonmail.ch>"]
license = "MIT"
readme = "README.md"
homepage = "www.manuelpasieka.com"

packages = [
    { include = "ppe" }
]

[tool.poetry.dependencies]
python = ">3.7, <3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = true
tagged-metadata = true
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = [
    "ppe/__init__.py"
]