[metadata]
name = ppe
version = 0.0.1
author = Manuel Pasieka 
author_email = manuel.pasieka@protonmail.ch 
description = Python Packaging Examples: Demonstrating different python packaging configurations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mapa17/python_packaging_examples
project_urls =
    Bug Tracker = https://github.com/mapa17/python_packaging_examples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# Define the python source file directory
package_dir =
    = src
# Find automatically all modules within the source directory
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ppe-hello = ppe.main:main
