[metadata]
name = ppe
version = 0.0.2
author = Manuel Pasieka 
author_email = manuel.pasieka@protonmail.ch 
description = Python Packaging Examples: Demonstrating different python packaging configurations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mapa17/python_packaging_examples
project_urls =
    Bug Tracker = https://github.com/mapa17/python_packaging_examples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
# Define the python source file directory
package_dir =
    = src
# Find automatically all modules within the source directory
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src

# OPTION #1
# NOTE: This is not needed if your artifacts are part of the source folder
# NOTHING NEEDS TO BE DONE

# OPTION #2
# Here one can specify files that are going to be included in the bdist package
# Format: <relative path in the environment folder> = <path relative to setup.py>
[options.data_files]
    # example: will put artifact.txt into ~/miniconda3/<ENV>/ppe/artifacts/artifact.txt
    ppe/artifacts = artifacts/artifact.txt

# OPTION #3
# Include files listed in MANIFEST.in (works only for sdist package)
#include_package_data=True 
#[options.package_data]
#    ppe = data/artifact2.txt


[options.entry_points]
console_scripts =
    ppe-hello = ppe.main:main
